--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,18 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is a microblog that is similar to Twitter
 
-Things you may want to cover:
+* Ruby version - 2.0
 
-* Ruby version
-
-* System dependencies
+* Rails Version - 4.0
 
 * Configuration
 
-* Database creation
+* Database creation (TBD - SQLite3)
 
-* Database initialization
+* Database initialization (TBD - SQLite3)
 
-* How to run the test suite
+* How to run the test suite (rspec)
 
-* Services (job queues, cache servers, search engines, etc.)
+* Deployment instructions (TBD)
 
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
